# vcat-d

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-PLUGIN-EXCEPTION.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/roncatech/vcat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/roncatech/vcat/: VcatApplication.java
app/src/main/java/com/roncatech/vcat/http/: HttpRequestHandler.java  HttpServer.java  VCAT_HttpServer.java
app/src/main/java/com/roncatech/vcat/legal/: TermsPayload.java  TermsRepository.java
app/src/main/java/com/roncatech/vcat/models/: DecoderConfig.java  ResumeInfo.java  RunConfig.java  SessionHeader.java  SessionInfo.java  SharedViewModel.java  (+5 more)
app/src/main/res/drawable/: bg_vcat_hfill.xml  ic_back_arrow.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stop.xml  rounded_button.xml  splash_noscale.xml  status_rectangle_bg.xml  transparent.xml
app/src/main/res/layout/: about_activity_old.xml  about_fragment.xml  activity_about.xml  activity_fullscreen_player.xml  activity_license_host.xml  activity_main.xml  activity_splash.xml  battery_level_picker.xml  custom_tab_layout.xml  dialog_export_test_vectors_info.xml  dialog_open_catalog.xml  dialog_playlist_download.xml  dialog_test_results_detail.xml  dialog_under_construction.xml  download_test_vectors_dialog.xml  duration_picker.xml  fragment_conditions.xml  fragment_license.xml  fragment_main.xml  fragment_test_results.xml  fragment_test_vector.xml  fragment_test_vectors.xml  fragment_vector_export.xml  fragment_vector_import.xml  playlist_dialog.xml  playlist_entries.xml  playlist_item.xml  row_catalog_header.xml  row_test_vector.xml  test_results_item.xml
app/src/main/res/menu/: main_activity_bottom_tabs.xml  playlist_options_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/raw/: letsencrypt_r11.pem
app/src/main/res/values/: arrays.xml  colors.xml  drawables.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-hdpi/: drawables.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/values-xhdpi/: drawables.xml
app/src/main/res/values-xxhdpi/: drawables.xml
app/src/main/res/values-xxxhdpi/: drawables.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/roncatech/vcat/: ExampleUnitTest.java
app/test_vectors/manifests/: f360p-p7-crf55-av1-fd2.manifest.json
decoder-plugin-api/: build.gradle  consumer-rules.pro
extension-dav1d/: build.gradle  consumer-rules.pro
extension-dav1d/src/androidTest/java/com/roncatech/extension_dav1d/: ExampleInstrumentedTest.java
extension-dav1d/src/main/cpp/: CMakeLists.txt  dav1d_jni.cc
extension-dav1d/src/main/cpp/cmake/: BuildDav1d.cmake  meson-cross-arm64-v8a.ini.in  meson-cross-armeabi-v7a.ini.in
extension-dav1d/src/main/java/com/roncatech/extension_dav1d/: Dav1dAv1Provider.java  Dav1dAv1RendererProvider.java  Dav1dDecoder.java  Dav1dDecoderException.java  Dav1dLibrary.java  Dav1dOutputBuffer.java  Dav1dVideoRenderer.java  NativeDav1d.java
extension-dav1d/src/test/java/com/roncatech/extension_dav1d/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+57 files in other folders)
